# rustwide

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml  release.yml
examples/: docs-builder.rs
src/: build.rs  inside_docker.rs  lib.rs  logging.rs  prepare.rs  toolchain.rs  utils.rs  workspace.rs
src/cmd/: actions.rs  mod.rs  process_lines_actions.rs  sandbox.rs
src/cmd/sandbox/: docker.rs  mod.rs
src/crates/: cratesio.rs  git.rs  local.rs  mod.rs  registry.rs
src/native/: mod.rs  unix.rs  windows.rs
src/tools/: binary_crates.rs  mod.rs  rustup.rs
tests/: integration.rs  issue_30.rs  logging_init_with.rs  logging_not_initialized.rs  tests.rs
tests/buildtest/: container_cleanup.rs  inside_docker.rs  mod.rs  runner.rs
tests/buildtest/crates/allocate/: Cargo.toml
tests/buildtest/crates/allocate/src/: main.rs
tests/buildtest/crates/cargo-config/: Cargo.toml
tests/buildtest/crates/cargo-config/.cargo/: config
tests/buildtest/crates/cargo-workspace/: Cargo.toml
tests/buildtest/crates/cargo-workspace/world/: Cargo.toml
tests/buildtest/crates/checksum-mismatch/: Cargo.toml
tests/buildtest/crates/extra-cargo-args/: Cargo.toml
tests/buildtest/crates/extra-cargo-args/extra-cargo-args-dep/: Cargo.toml
tests/buildtest/crates/extra-cargo-args/src/: main.rs
tests/buildtest/crates/hello-world/: Cargo.toml
tests/buildtest/crates/invalid-cargotoml-conflicting-links/: Cargo.toml
tests/buildtest/crates/invalid-cargotoml-content/: Cargo.toml
tests/buildtest/crates/invalid-cargotoml-content-deps/: Cargo.toml
tests/buildtest/crates/invalid-cargotoml-content-type-in-deps/: Cargo.toml
tests/buildtest/crates/invalid-cargotoml-cyclic-feature/: Cargo.toml
tests/buildtest/crates/invalid-cargotoml-cyclic-package/: Cargo.toml
tests/buildtest/crates/invalid-cargotoml-missing-override/: Cargo.toml
tests/buildtest/crates/invalid-cargotoml-missing-patch/: Cargo.toml
tests/buildtest/crates/invalid-cargotoml-missing-registry-config/: Cargo.toml
tests/buildtest/crates/invalid-cargotoml-missing-registry-config/.cargo/: config.toml
tests/buildtest/crates/invalid-cargotoml-syntax/: Cargo.toml
tests/buildtest/crates/invalid-cargotoml-syntax-deps/: Cargo.toml
tests/buildtest/crates/invalid-lockfile-syntax/: Cargo.toml
tests/buildtest/crates/links-collision/: Cargo.toml
tests/buildtest/crates/lockfile-collision/: Cargo.toml
tests/buildtest/crates/lockfile-collision/crates/lockfile-collision/: Cargo.toml
tests/buildtest/crates/missing-deps-git/: Cargo.toml
tests/buildtest/crates/missing-deps-git-locked/: Cargo.toml
tests/buildtest/crates/missing-deps-registry/: Cargo.toml
tests/buildtest/crates/missing-deps-registry-version/: Cargo.toml
tests/buildtest/crates/missing-deps-typo/: Cargo.toml
tests/buildtest/crates/missing-feature/: Cargo.toml
tests/buildtest/crates/out-of-memory/: Cargo.toml
tests/buildtest/crates/out-of-memory/src/: main.rs
tests/buildtest/crates/path-based-patch/: Cargo.toml
tests/buildtest/crates/path-based-patch/patch/: Cargo.toml
tests/buildtest/crates/path-based-patch/patch/src/: lib.rs
tests/buildtest/crates/path-based-patch/src/: main.rs
tests/buildtest/crates/process-lines/: Cargo.toml
tests/buildtest/crates/process-lines/src/: main.rs
tests/buildtest/crates/yanked-deps/: Cargo.toml
tests/integration/: build_dir.rs  crates_alt.rs  crates_git.rs  mod.rs  purge_caches.rs
tests/utils/: mod.rs
