[package]
name = "rustwide"
version = "0.16.0"
edition = "2018"
build = "build.rs"

documentation = "https://docs.rs/rustwide"
repository = "https://github.com/rust-lang/rustwide"
description = "Execute your code on the Rust ecosystem."
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
unstable = []
unstable-toolchain-ci = []

[dependencies]
http = "1.1.0"
failure = "0.1.3"
futures-util = "0.3.5"
log = "0.4.6"
tokio = { version = "1.0", features = ["process", "time", "io-util", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scopeguard = "1.0.0"
lazy_static = "1.0.0"
tempfile = "3.0.0"
attohttpc = "0.28.0"
flate2 = "1"
tar = "0.4.0"
percent-encoding = "2.1.0"
walkdir = "2.2"
toml = "0.8.12"
fs2 = "0.4.3"
remove_dir_all = "0.8.2"
base64 = "0.22.0"
getrandom = { version = "0.2", features = ["std"] }
thiserror = "1.0.20"
git2 = "0.19.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["signal", "user"]}

[target.'cfg(windows)'.dependencies]
windows-sys = {version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Threading"]}

[dev-dependencies]
env_logger = "0.11.3"
rand = "0.8.5"
tiny_http = "0.12.0"
