[package]
name = "checksum-mismatch"
version = "0.1.0"
authors = ["Pietro Albini <pietro@pietroalbini.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
empty-library = "1.0.0"

[features]

# attempts to replicate error such as https://crater-reports.s3.amazonaws.com/beta-1.96-1/1.95.0/gh/Deltafall-Community.deltafall-clicker/log.txt
