[package]
name = "invalid-cargotoml-content-type-in-deps"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libressl-pnacl-sys = "=2.1.0"

# libressl-pnacl-sys at version 2.1.0 specifies in its Cargo.toml ยน file a key `[[lib]]` (an array of tables),
# but the lib key is supposed to be a table ('[lib]'). As such cargo considerse the Cargo.toml to be invalid and fails to compile the crate.
#
#   Downloaded libressl-pnacl-sys v2.1.0
# error: invalid type: map, expected a string
#   --> ../../../cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/libressl-pnacl-sys-2.1.0/Cargo.toml:10:1
#    |
# 10 | / [[lib]]
# 11 | | name = "cross-platform-ssl-link"
# 12 | | path = "lib.rs"
#    | |_______________^
#    |
# 
# [1]: The Cargo.toml.orig can be found in the .crate archive available at https://static.crates.io/crates/libressl-pnacl-sys/libressl-pnacl-sys-2.1.0.crate
#
