[package]
name = "missing-deps-git"
version = "0.1.0"
authors = ["Pietro Albini <pietro@pietroalbini.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
not-a-git-repo = { git = "https://www.example.com/definitely-not-a-git-repo.git" }
