[package]
name = "missing-deps-registry-version"
version = "0.1.0"
authors = ["Pietro Albini <pietro@pietroalbini.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
empty-library = "=0.5.0"

# Note that while the crate empty-library is published to crates.io it does not have a version 0.5.0 published ยน
# as such cargo will fail as it will be unable to find a matching package version for the specified dependency
#
# This is a reproduction for crater errors like https://crater-reports.s3.amazonaws.com/beta-1.86-1/1.85.0/gh/adelelopez.bayes/log.txt
#
# [1]: https://crates.io/crates/empty-library/versions
