[package]
name = "missing-feature"
version = "0.1.0"
authors = ["Pietro Albini <pietro@pietroalbini.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
empty-library = { version = "1.0.0", features = ["does-not-exist"] }

[features]

# attempts to replicate errors such as https://crater-reports.s3.amazonaws.com/beta-1.96-1/1.95.0/gh/GHOryy5.AINFTP/log.txt
